tests/fixtures/valid/multi/instantiated_import_type_binding/main.gcl
// main.gcl -- rebinds the lib's Widget type to MyWidget
type MyWidget { size: Length }

include lib(Widget: MyWidget).{ origin_size };

node result: Length = @origin_size;
