tests/fixtures/invalid/multi/pub_include_leaks_private_type/src/container/lib.gcl
// container.gcl -- generic library with a bindable element type.
pub(bind) type Element { Element(size: Length) }

pub const node origin: Element = Element(size: 1.0 m);
